added validationServiceTests