@@ -6,8 +6,6 @@ import uk.gov.hmcts.dts.fact.model.admin.CourtAddress;
 
 import java.util.List;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-
 import static java.util.stream.Collectors.toList;
 
 @Service
@@ -74,6 +72,6 @@ public class ValidationService {
                 return epimId == null || !pattern.matcher(epimId).matches();
             })
             .map(CourtAddress::getEpimId)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
